--- a/templates/cart.html
+++ b/templates/cart.html
@@ -3,6 +3,7 @@
 
 {% block body %}
 
+
     <table class="table table-striped mt-3">
         <thead>
         <tr>
@@ -13,7 +14,20 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
+            {% for melon in melons_list %}
+                <tr>
+                <td>{{ melon.common_name }}</td>
+                <td>{{ melon.quantity }}</td>
+                <td>{{ melon.price }}</td>
+                <td>{{ melon.total_cost }}</td>
+                </tr>
+    
+
+
+       
+
+            {% endfor %}
+        <!-- <tr>
             <td>Ancient Watermelon</td>
             <td>5</td>
             <td>$3.00</td>
@@ -36,7 +50,7 @@
             <td>2</td>
             <td>$3.00</td>
             <td>$6.00</td>
-        </tr>
+        </tr> -->
         </tbody>
     </table>
 
